style.css
/* ... */
.snippetbox4 p{
  font-size: 1rem;
  padding: 20px 45px;
  text-align: center;
}
.snippetbox4 a{
  text-decoration: none;
  font-family: 'caveat', cursive;
  font-weight: bold;
  color: #283b3a;
  border-style: solid;
  border-width: 2px;
  border-radius: 10px;
  border-color: #283b3a;
  padding: 12px;
  margin: 20px;
}
.snippetbox4 a:hover{
  background-color: #283b3a;
  color: white;
}

/*END of SERVICES PAGE*/

/*START of SERVICES 1-1*/
.featureimage5{
  margin: auto;
  padding: 80px;
  background-color: #ffdad9;
  background-image: linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.4)), url(images/1x/pexels-dids-3530116.jpg); /*linear gradient code copied from https://codetheweb.blog/fullscreen-image-hero/*/
  background-size: cover;
  background-position: center center;
  background-attachment: fixed;
  background-repeat: no-repeat;
}
.compquote5{
  display:flex;
  justify-content: center;
  align-content: center;
  font-family: 'Caveat', cursive;
  font-size: 4rem;
  font-weight: bold;
  color: rgb(241, 241, 241);
  margin-top: 0;
  margin-bottom: 0.5em;
}
.src{
  font-family: 'Poppins', sans-serif;
  color: #283b3a;
  background-color: #ffdad9;
}
.serv1{
  display: flex;
  flex-direction: row-reverse;
  background-color: #ffdad9;
  margin: 0 0;
}
.wax{
  width: 70%;
  margin: 0 0;
  padding-top: 50px; 
  padding-left: 20px;
  padding-bottom: 30px;
  padding-right:130px;
  background-color: #ffdad9;
  font-family: 'Poppins', sans-serif;
  font-size: 1rem;
  color: #334f4e;
}
.wax h2{
  font-size: 2rem;
}
.waximg{
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 30%;
  height: 100%;
  background-color: #ffdad9;
  padding-top:100px;
  padding-left: 50px;
}
.price-header{
  font-size: 2rem;
  text-align: center;
  padding: 100px 0 20px;
}
.wax-pl{
  display: flex;
  flex-direction: column;
  background-color: #ffdad9;
  color: #283b3a;
  font-family: 'poppins', sans-serif;
  width: 100%;
  border-collapse: collapse;
}
.table-row{
  display:flex;
  padding-bottom: 100px;
}
.table-column{
  flex: 50%;
  margin: 20px 0 0 150px;
}
table caption{
  font-size: 2rem;
  font-weight: bold;
  text-align: center;
  padding: 80px 0px 30px;
}
.wax-pl th{
  font-weight: bold;
  font-size: 1.3rem;
  text-align: center;
}
.wax-row{
  text-align: center;
  align-content: center;
  padding: 20px 100px;
}
tr:nth-child(even) {
  background-color: #f5cac7;
}
table{
  border-collapse: collapse;
  width: 550px;
  margin: 0 0;
}
.pl{
  width: 60%;
}
.faq-header{
  text-align: center;
  padding: 100px 0 20px;
  font-size: 2rem;
}
/*END of SERVICES 1-1*/
/*START OF SERVICES 3-5*/
.featureimage6{
  margin: auto;
  padding: 80px;
  background-color: #ffdad9;
  background-image: linear-gradient(rgba(0, 0, 0, 0.4),rgba(0, 0, 0, 0.4)), url(images/1x/pexels-dids-3530116.jpg); /*linear gradient code copied from https://codetheweb.blog/fullscreen-image-hero/*/
  background-size: cover;
  background-position: center center;
  background-attachment: fixed;
  background-repeat: no-repeat;
}
.compquote6{
  display:flex;
  justify-content: center;
  align-content: center;
  font-family: 'caveat', cursive;
  /*font-family: 'Caveat', cursive;*/
  font-size: 4rem;
  font-weight: bold;
  color: rgb(241, 241, 241);
  margin-top: 0;
  margin-bottom: 0.5em;
}
.price-header2{
  font-size: 2rem;
  text-align: center;
  padding: 100px 0 20px;
}
.wax-pl2{
  display: flex;
  flex-direction: column;
  background-color: #ffdad9;
  color: #283b3a;
  font-family: 'poppins', sans-serif;
  width: 100%;
  border-collapse: collapse;
}
.table-row2{
  display:flex;
  padding-bottom: 100px;
}
.table-column2{
  flex: 50%;
  margin: 20px 0 0 80px;
}
table caption{
  font-size: 2rem;
  font-weight: bold;
  text-align: center;
  padding: 80px 0px 30px;
}
.wax-pl2 th{
  font-weight: bold;
  font-size: 1.3rem;
  text-align: center;
}
.wax-row{
  text-align: center;
  align-content: center;
  padding: 20px 100px;
}
tr:nth-child(even) {
  background-color: #f5cac7;
}
table{
  border-collapse: collapse;
  width: 550px;
  margin: 0 0;
}
.pl{
  width: 60%;
}
.faq-header2{
  text-align: center;
  padding: 100px 0 20px;
  font-size: 2rem;
}
/*FOOTER*/
footer{
  display: flex;
  justify-content: center;
  background-color: #283b3a;
  padding: 20px;
}
.fa {
  width: 50px;
  text-align: center;
  text-decoration: none;
  margin: 5px 2px;
}
footer a{
  margin-left:15px;
  margin-right: 15px;
}
footer p{
  flex-direction: row;
  font-size: 0.8rem;
  text-align: center;
  color:rgb(241, 241, 241);
  font-family: 'poppins', sans-serif;
  align-self: center;
}

/* Small devices (portrait tablets and large phones, 600px and up) */
@media only screen and (min-width: 600px) {
  .homepagebox{
    display: flex;
    flex-direction: column;
  }
}

